# data-analysis-projects

./: README.md
01-mean-variance-standard-deviation-calculator/: main.py  mean_var_std.py  pyproject.toml  test_module.py
02-demographic-data-analyzer/: demographic_data_analyzer.py  number_utils.py  pyproject.toml  test_module.py
03-medical-data-visualizer/: medical_data_visualizer.py  pyproject.toml  test_module.py
04-page-view-time-series-visualizer/: date_utils.py  pyproject.toml  test_module.py  time_series_visualizer.py
05-sea-level-predictor/: pyproject.toml  sea_level_predictor.py  test_module.py
