[tool.poetry]
name = "data-analysis-demographic-data-analyzer"
version = "0.1.0"
description = "An FCC Data Analysis Challenge"
authors = ["pbmchc"]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
